# postmaster

./: .gitignore  pyproject.toml
.opencode/plans/: drop-description-from-kv-tables.md
src/postmaster/: __main__.py  app.py  theme.py  theme.tcss
src/postmaster.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/postmaster/engine/: client.py  curl_parser.py
src/postmaster/models/: __init__.py  collection.py  environment.py  request.py  response.py
src/postmaster/screens/: __init__.py  main_screen.py
src/postmaster/services/: generators.py  storage.py  variable_resolver.py
src/postmaster/utils/: constants.py
src/postmaster/widgets/: __init__.py  action_panel.py  auth_editor.py  body_editor.py  hsplitter.py  kv_table.py  left_panel.py  method_dropdown.py  request_bar.py  right_panel.py  sidebar.py  splitter.py  status_bar.py  top_bar.py
tests/: test_engine.py  test_models.py  test_variables.py
