[project]
name = "postmaster"
version = "0.1.0"
description = "Terminal-based HTTP client inspired by Postman/Bruno"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.52.0",
    "httpx>=0.27.0",
    "httpx[http2]",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "pyperclip>=1.8.0",
    "orjson>=3.9.0",
]

[project.scripts]
postmaster = "postmaster.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/postmaster"]

[tool.pytest.ini_options]
testpaths = ["tests"]
